LB Horizontal classcast exception error

--- a/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
+++ b/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
+<androidx.leanback.widget.HorizontalGridView
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/tvShowRecyclerView"
@@ -19,4 +19,4 @@
 >
 
   <requestFocus />
-</androidx.recyclerview.widget.RecyclerView>
+</androidx.leanback.widget.HorizontalGridView>
