--- a/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
+++ b/serenity-app/src/main/res/layout-large/include_tvshow_recyclerview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
+<androidx.leanback.widget.HorizontalGridView
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/tvShowRecyclerView"
@@ -14,9 +14,11 @@
   android:focusable="true"
   android:nextFocusUp="@+id/categoryFilter"
   android:visibility="gone"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+  app:rowHeight="wrap_content"
   tools:listitem="@layout/poster_indicator_view"
   tools:visibility="visible"
 >
 
   <requestFocus />
-</androidx.recyclerview.widget.RecyclerView>
+</androidx.leanback.widget.HorizontalGridView>
