--- a/serenity-app/src/main/res/layout-large/video_gallery_fragment.xml
+++ b/serenity-app/src/main/res/layout-large/video_gallery_fragment.xml
@@ -183,7 +183,7 @@
     android:padding="5dp"
   >
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.leanback.widget.HorizontalGridView
       android:id="@+id/moviePosterView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -194,16 +194,16 @@
       android:clipToPadding="false"
       android:focusable="true"
       android:nextFocusUp="@+id/categoryFilter"
+      app:rowHeight="wrap_content"
       tools:layoutManager="LinearLayoutManager"
       tools:layout_height="200dp"
       tools:layout_width="match_parent"
       tools:listitem="@layout/poster_indicator_view"
       tools:visibility="visible"
-      tools:orientation="horizontal"
-    >
+      tools:orientation="horizontal">
 
       <requestFocus />
-    </androidx.recyclerview.widget.RecyclerView>
+    </androidx.leanback.widget.HorizontalGridView>
 
   </LinearLayout>
 
