--- a/serenity-app/src/main/res/layout-large/video_grid_fragment.xml
+++ b/serenity-app/src/main/res/layout-large/video_grid_fragment.xml
@@ -8,7 +8,7 @@
   android:clipToPadding="false"
 >
 
-  <androidx.recyclerview.widget.RecyclerView
+  <androidx.leanback.widget.HorizontalGridView
     android:id="@+id/moviePosterView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,10 +20,11 @@
     android:nextFocusUp="@+id/categoryFilter"
     android:clipChildren="false"
     android:clipToPadding="false"
+    app:rowHeight="wrap_content"
   >
 
     <requestFocus />
-  </androidx.recyclerview.widget.RecyclerView>
+  </androidx.leanback.widget.HorizontalGridView>
 
   <include
     layout="@layout/include_loading_progress"
