Issue #433 make sure activity in herits from App Compat Leanback

--- a/serenity-app/src/main/res/values/app_styles.xml
+++ b/serenity-app/src/main/res/values/app_styles.xml
@@ -27,7 +27,7 @@
   </style>
 
 
-  <style name="LeanbackPreferences" parent="Theme.Leanback">
+  <style name="LeanbackPreferences" parent="Theme.AppCompat.Leanback">
     <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Leanback</item>
     <item name="android:windowIsTranslucent">true</item>
     <item name="android:windowBackground">@android:color/transparent</item>
