--- a/serenity-app/src/main/res/layout-large/include_loading_progress.xml
+++ b/serenity-app/src/main/res/layout-large/include_loading_progress.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
   <FrameLayout
-      android:layout_width="150dp"
-      android:layout_height="150dp"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       android:layout_gravity="center"
       android:visibility="gone"
       android:id="@+id/data_loading_container"
