--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -28,7 +28,8 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:clipChildren="false"
-      android:clipToPadding="false">
+      android:clipToPadding="false"
+    >
 
       <androidx.leanback.widget.HorizontalGridView
         android:id="@+id/episodeGridView"
@@ -56,7 +57,8 @@
         android:background="@color/card_background"
         android:paddingStart="@dimen/overscan_start_padding"
         android:paddingEnd="@dimen/overscan_end_padding"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+      >
 
         <TextView
           android:id="@+id/tvShowSeasonsTitle"
@@ -65,7 +67,7 @@
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textColor="#F0F0F0"
-          tools:ignore="SelectableText"/>
+          tools:ignore="SelectableText" />
       </LinearLayout>
 
       <LinearLayout
@@ -78,7 +80,8 @@
         android:background="@color/card_background"
         android:orientation="vertical"
         android:clipChildren="false"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+      >
 
         <androidx.leanback.widget.HorizontalGridView
           android:id="@+id/tvShowSeasonImageGallery"
