--- a/serenity-app/src/main/res/layout-large/activity_main.xml
+++ b/serenity-app/src/main/res/layout-large/activity_main.xml
@@ -1,84 +1,109 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/drawer_layout"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:background="@android:color/background_dark"
->
-
-  <RelativeLayout
-    android:id="@+id/mainLayout"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-  >
-
-    <ImageView
-      android:id="@+id/mainGalleryBackground"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_centerInParent="true"
-      android:scaleType="fitXY"
-      android:src="@drawable/serenity_bonsai_splash" />
+    android:background="@android:color/background_dark">
 
     <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:paddingStart="@dimen/overscan_start_padding"
-      android:paddingEnd="@dimen/overscan_end_padding"
-    >
-
-      <fragment
-        android:id="@+id/mainMenuFragment"
-        android:name="us.nineworlds.serenity.fragments.MainMenuFragment"
+        android:id="@+id/mainLayout"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_centerInParent="true" />
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/mainGalleryBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/serenity_bonsai_splash" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingStart="@dimen/overscan_start_padding"
+            android:paddingEnd="@dimen/overscan_end_padding">
+
+            <fragment
+                android:id="@+id/mainMenuFragment"
+                android:name="us.nineworlds.serenity.fragments.MainMenuFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="100dp"
+                android:layout_centerInParent="true" />
+
+        </RelativeLayout>
+
+        <include
+            layout="@layout/include_loading_progress"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerInParent="true" />
 
     </RelativeLayout>
 
-    <include
-      layout="@layout/include_loading_progress"
-      android:layout_width="150dp"
-      android:layout_height="150dp"
-      android:layout_centerInParent="true" />
-
-  </RelativeLayout>
-
-  <com.google.android.material.appbar.AppBarLayout
-    android:id="@+id/appBar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/card_background"
-  >
-
-    <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:paddingStart="@dimen/overscan_start_padding"
-      android:paddingEnd="@dimen/overscan_end_padding"
-    >
-
-      <com.google.android.material.appbar.MaterialToolbar
-        style="@style/Widget.AppTheme.Toolbar.Transparent"
-        android:id="@+id/action_toolbar"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_alignParentEnd="true"
-        app:maxButtonHeight="45dp"
-        app:titleTextColor="@color/white"
-        app:menu="@menu/main_menu_botton_navigation" />
-
-      <us.nineworlds.serenity.ui.views.TextClock
-        style="@android:style/TextAppearance.Holo.Medium"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:textColor="#F0F0F0" />
+        android:background="@color/card_background">
 
-    </RelativeLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingStart="@dimen/overscan_start_padding"
+            android:paddingEnd="@dimen/overscan_end_padding">
 
-  </com.google.android.material.appbar.AppBarLayout>
+            <us.nineworlds.serenity.ui.views.TextClock
+                style="@android:style/TextAppearance.Holo.Medium"
+                android:id="@+id/main_clock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:gravity="center_vertical"
+                android:textColor="#F0F0F0" />
+
+            <androidx.leanback.widget.HorizontalGridView
+                android:id="@+id/mainGalleryMenu"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center|center_vertical"
+                app:layout_constraintStart_toEndOf="@id/main_clock"
+                app:layout_constraintEnd_toStartOf="@+id/action_toolbar"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                android:descendantFocusability="afterDescendants"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:nextFocusRight="@id/action_toolbar"
+                app:numberOfRows="1"
+                app:rowHeight="wrap_content">
+
+            </androidx.leanback.widget.HorizontalGridView>
+
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/action_toolbar"
+                style="@style/Widget.AppTheme.Toolbar.Transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:descendantFocusability="afterDescendants"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:maxButtonHeight="45dp"
+                app:menu="@menu/main_menu_botton_navigation"
+                app:titleTextColor="@color/white" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
