--- a/serenity-app/src/main/res/layout-large/main_menu_view.xml
+++ b/serenity-app/src/main/res/layout-large/main_menu_view.xml
@@ -1,31 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="100dp"
+  android:layout_height="match_parent"
   android:background="@drawable/content_panel_dark"
   android:layout_centerInParent="true"
 >
 
-  <androidx.leanback.widget.HorizontalGridView
-    android:id="@+id/mainGalleryMenu"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginLeft="5dp"
-    android:descendantFocusability="afterDescendants"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:layout_gravity="center|center_vertical"
-    android:clipChildren="false"
-    android:clipToPadding="false"
-    app:rowHeight="wrap_content"
-    app:numberOfRows="1"
-  >
+  <!-- Content Here -->
 
-  </androidx.leanback.widget.HorizontalGridView>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
