--- a/serenity-app/src/main/res/layout-large/item_mainmenu.xml
+++ b/serenity-app/src/main/res/layout-large/item_mainmenu.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true"
     android:descendantFocusability="afterDescendants"
 
@@ -17,6 +18,6 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:gravity="center"
-
+        tools:text="Menu"
         />
 </FrameLayout>
