--- a/serenity-app/src/main/res/layout-large/main_menu_view.xml
+++ b/serenity-app/src/main/res/layout-large/main_menu_view.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:layout_centerInParent="true"
+  android:background="@drawable/content_panel_dark"
+  tools:ignore="MissingDefaultResource"
+>
+
+  <!-- Content Here -->
+
+  <androidx.fragment.app.FragmentContainerView
+    android:id="@+id/video_content_fragment"
+    android:name="us.nineworlds.serenity.fragments.VideoContentVerticalGridFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_centerInParent="true"
-    android:background="@drawable/content_panel_dark"
-    tools:ignore="MissingDefaultResource">
-
-    <!-- Content Here -->
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/video_content_fragment"
-        android:name="us.nineworlds.serenity.fragments.VideoContentVerticalGridFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:descendantFocusability="afterDescendants"
-        tools:layout="@layout/video_grid_fragment" />
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:descendantFocusability="afterDescendants"
+    tools:layout="@layout/video_grid_fragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
