--- a/serenity-app/src/main/res/layout-large/activity_leanback_details.xml
+++ b/serenity-app/src/main/res/layout-large/activity_leanback_details.xml
@@ -6,11 +6,17 @@
   android:layout_height="match_parent"
   tools:ignore="MissingDefaultResource"
 >
+  <ImageView
+    android:id="@+id/detail_background_image"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
   <androidx.fragment.app.FragmentContainerView
     android:id="@+id/fragment_leanback_container"
     android:name="us.nineworlds.serenity.ui.activity.leanback.details.DetailsFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:background="@color/card_background" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
