--- a/serenity-app/src/main/res/layout-large/leanback_fullwidth_details_overview.xml
+++ b/serenity-app/src/main/res/layout-large/leanback_fullwidth_details_overview.xml
@@ -45,12 +45,26 @@
             android:orientation="vertical"
             >
 
+            <us.nineworlds.serenity.ui.leanback.presenters.NonOverlappingFrameLayout
+                android:id="@+id/details_overview_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:descendantFocusability="afterDescendants"
+                android:paddingStart="@dimen/lb_details_v2_description_margin_start"
+                android:clipToPadding="false"
+                android:clipChildren="false"
+                android:layout_weight="2"
+                />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/details_overview_actions_background"
-                android:background="?attr/defaultBrandColorDark"
-                android:visibility="gone"
+                android:background="@color/card_background"
+                android:layout_marginStart="@dimen/lb_details_v2_description_margin_start"
+                android:visibility="visible"
                 android:orientation="vertical" >
 
                 <androidx.leanback.widget.HorizontalGridView
@@ -67,17 +81,6 @@
                     lb:rowHeight="@dimen/lb_details_v2_actions_height" />
             </LinearLayout>
 
-            <us.nineworlds.serenity.ui.leanback.presenters.NonOverlappingFrameLayout
-                android:id="@+id/details_overview_description"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:descendantFocusability="afterDescendants"
-                android:paddingStart="@dimen/lb_details_v2_description_margin_start"
-                android:clipToPadding="false"
-                android:clipChildren="false"
-                />
         </LinearLayout>
 
     </FrameLayout>
