--- a/serenity-app/src/main/res/layout-large/activity_main.xml
+++ b/serenity-app/src/main/res/layout-large/activity_main.xml
@@ -56,10 +56,10 @@
     android:name="us.nineworlds.serenity.fragments.MainMenuFragment"
     android:layout_width="0dp"
     android:layout_height="0dp"
-    app:layout_constraintStart_toEndOf="@id/overscan_start"
-    app:layout_constraintEnd_toStartOf="@id/overscan_end"
-    app:layout_constraintTop_toBottomOf="@id/content_start"
-    app:layout_constraintBottom_toTopOf="@id/overscan_bottom"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
     tools:layout="@layout/main_menu_view" />
 
   <us.nineworlds.serenity.ui.views.TextClock
